updated email service logic to unblock STMP